--- a/apps/week6/src/components/Editor/Editor.module.css
+++ b/apps/week6/src/components/Editor/Editor.module.css
@@ -15,10 +15,17 @@
   gap: 4px;
 
   > button {
-    border: 1px solid #9E9E9E;
+    border: 1px solid #9e9e9e;
     border-radius: 4px;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
+  }
+
+  > input {
+    padding: 0 4px;
+    outline-style: none;
+    border: 1px solid #9e9e9e;
+    border-radius: 4px;
   }
 }
 
@@ -29,6 +36,18 @@
   overflow-y: auto;
   box-sizing: border-box;
   outline-style: none;
-  border: 1px solid #9E9E9E;
-  background-color: #FAFAFA;
+  border: 1px solid #9e9e9e;
+  background-color: #fafafa;
+
+  b {
+    font-weight: bold;
+  }
+
+  i {
+    font-style: italic;
+  }
+
+  ul {
+    list-style: disc;
+  }
 }
