--- a/apps/week6/src/components/Editor/Editor.module.css
+++ b/apps/week6/src/components/Editor/Editor.module.css
@@ -30,9 +30,8 @@
 }
 
 .editor {
-  flex: 1;
   padding: 16px;
-  height: 480px;
+  height: 320px;
   overflow-y: auto;
   box-sizing: border-box;
   outline-style: none;
@@ -40,6 +39,27 @@
   background-color: #fafafa;
 
   b {
+    font-weight: bold;
+  }
+
+  i {
+    font-style: italic;
+  }
+
+  ul {
+    list-style: disc;
+  }
+}
+
+.preview {
+  flex: 1;
+  padding: 16px;
+  overflow-y: auto;
+  box-sizing: border-box;
+  border: 1px solid #9e9e9e;
+  background-color: #fafafa;
+
+  b, strong {
     font-weight: bold;
   }
 
