--- a/apps/week1/src/components/ChartFilter.module.css
+++ b/apps/week1/src/components/ChartFilter.module.css
@@ -1,12 +1,21 @@
 .container {
   display: flex;
   justify-content: flex-end;
+  gap: 4px;
 
-  > select {
+  > button {
     padding: 4px 8px;
-    font-size: 1rem;
     color: #212121;
-    border: 1px solid #212121;
+    border-style: none;
     border-radius: 4px;
+    cursor: pointer;
+
+    &.common {
+      background-color: #EEEEEE;
+    }
+
+    &.selected {
+      background-color: #FFF59D;
+    }
   }
 }
