fix: week1 가이드에 맞춰 수정 #2

--- a/apps/week1/src/components/ChartFilter.module.css
+++ b/apps/week1/src/components/ChartFilter.module.css
@@ -11,11 +11,11 @@
     cursor: pointer;
 
     &.common {
-      background-color: #EEEEEE;
+      background-color: #eeeeee;
     }
 
     &.selected {
-      background-color: #FFF59D;
+      background-color: #fff59d;
     }
   }
 }
