--- a/apps/week2/styles/fileUploader.css
+++ b/apps/week2/styles/fileUploader.css
@@ -1,15 +1,5 @@
-#file-uploader {
-  width: 300px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
 #drop-zone {
   position: relative;
-  width: 300px;
-  height: 240px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,7 +7,7 @@
   background-color: #eeeeee;
 
   &.available {
-    background-color: #C8E6C9;
+    background-color: #c8e6c9;
   }
 
   > input {
@@ -32,57 +22,56 @@
 }
 
 #status-zone {
-  width: 300px;
-  height: 320px;
   display: flex;
   flex-direction: column;
   gap: 8px;
   overflow-y: auto;
+}
 
-  > .file-item {
-    width: 100%;
+#status-zone > .upload-status-item {
+  width: 100%;
+  display: flex;
+  gap: 8px;
+
+  > div {
+    flex: 1;
     display: flex;
-    gap: 8px;
+    flex-direction: column;
+    gap: 4px;
+    font-size: 0.9rem;
 
-    > .info-group {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      font-size: 0.9rem;
+    > div:last-child {
+      border-radius: 2px;
 
-      > .upload-status {
+      > div {
+        width: 0;
+        display: flex;
+        align-items: center;
         border-radius: 2px;
-        background-color: #eeeeee;
+        box-sizing: border-box;
+      }
 
-        > .progress-bar {
-          width: 0;
-          padding: 4px;
-          display: flex;
-          align-items: center;
-          font-size: 0.75rem;
-          border-radius: 2px;
-          box-sizing: border-box;
-        }
+      > div.success {
+        height: 16px;
+        background-color: #81c784;
+        animation: fillWidth 0.1s ease-in-out forwards;
+      }
 
-        > .progress-bar.success {
-          height: 16px;
-          background-color: #81c784;
-          animation: fillWidth 0.15s ease-in-out forwards;
-        }
-
-        > .progress-bar.fail {
-          color: #FFFFFF;
-          background-color: #e57373;
-          animation: fillWidth 0.05s ease-in-out forwards;
-        }
+      > div.fail {
+        width: 100%;
+        padding: 8px;
+        font-size: 0.75rem;
+        color: #FFFFFF;
+        background-color: #D32F2F;
       }
     }
+  }
 
-    > img {
-      width: 100px;
-      object-fit: contain;
-    }
+  > img {
+    display: none;
+    width: 100px;
+    height: 100%;
+    object-fit: contain;
   }
 }
 
