--- a/apps/week1/src/components/ChartFilter.module.css
+++ b/apps/week1/src/components/ChartFilter.module.css
@@ -25,8 +25,12 @@
       background-color: #fff59d;
     }
 
+    &.light {
+      background-color: var(--lightBg);
+    }
+
     &.dark {
-      background-color: #212121;
+      background-color: var(--darkBg);
     }
   }
 }
