--- a/apps/week2/styles/fileUploader.css
+++ b/apps/week2/styles/fileUploader.css
@@ -6,10 +6,6 @@
   font-size: 0.9rem;
   background-color: #eeeeee;
 
-  &.available {
-    background-color: #c8e6c9;
-  }
-
   > input {
     position: absolute;
     top: 0;
@@ -37,13 +33,14 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     gap: 4px;
     font-size: 0.9rem;
 
     > div:last-child {
       border-radius: 2px;
 
-      > div {
+      > span {
         width: 0;
         display: flex;
         align-items: center;
@@ -51,13 +48,13 @@
         box-sizing: border-box;
       }
 
-      > div.success {
+      > span.success {
         height: 16px;
         background-color: #81c784;
         animation: fillWidth 0.1s ease-in-out forwards;
       }
 
-      > div.fail {
+      > span.fail {
         width: 100%;
         padding: 8px;
         font-size: 0.75rem;
