--- a/apps/week4/src/components/Filter/Filter.module.css
+++ b/apps/week4/src/components/Filter/Filter.module.css
@@ -8,11 +8,14 @@
     padding: 8px;
     border-style: none;
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0);
     cursor: pointer;
 
+    &.common {
+      background-color: rgba(255, 255, 255, 0);
+    }
+
     &.selected {
-      background-color: #E0E0E0;
+      background-color: #e0e0e0;
     }
   }
 }
