--- a/apps/week4/src/components/SearchForm/SearchForm.module.css
+++ b/apps/week4/src/components/SearchForm/SearchForm.module.css
@@ -7,7 +7,7 @@
   > input[type="text"] {
     width: 100%;
     padding: 8px 4px;
-    border: solid 1px #9E9E9E;
+    border: solid 1px #9e9e9e;
     border-radius: 4px;
     outline-style: none;
     box-sizing: border-box;
