--- a/apps/week8/components/LandingPage/LandingPage.module.css
+++ b/apps/week8/components/LandingPage/LandingPage.module.css
@@ -5,31 +5,45 @@
 }
 
 .hero {
-  text-align: center;
-  padding: 80px 20px;
-  background-color: #f8f9fa;
+  position: relative;
 
-  > h1 {
-    font-size: 2.8rem;
-    font-weight: 700;
-    margin-bottom: 20px;
+  > div {
+    position: relative;
+    text-align: center;
+    padding: 80px 20px;
+
+    > h1 {
+      font-size: 2.8rem;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
+    > p {
+      font-size: 1.2rem;
+      color: #555;
+      margin-bottom: 40px;
+    }
+
+    > button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: 600;
+    }
   }
 
-  > p {
-    font-size: 1.2rem;
-    color: #555;
-    margin-bottom: 40px;
-  }
-
-  > button {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    font-size: 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: 600;
+  > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
   }
 }
 
@@ -62,14 +76,11 @@
     color: #616161;
   }
 
-  > .imagePlaceholder {
-    background-color: #e0e0e0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #888;
+  > .imagePlaceholder > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 8px;
-    font-size: 14px;
   }
 }
 
@@ -149,7 +160,7 @@
 
     > button {
       color: white;
-      background-color: #007bff;;
+      background-color: #007bff;
     }
   }
 }
